--- a/RunTogether/app.json
+++ b/RunTogether/app.json
@@ -11,9 +11,8 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
+    "permissions": ["mediaLibrary"],
     "ios": {
       "supportsTablet": true
     },
