--- a/RunTogether/package.json
+++ b/RunTogether/package.json
@@ -2,8 +2,10 @@
   "name": "runtogether",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "type": "module",
   "scripts": {
     "start": "expo start",
+    "server": "nodemon ./backend/server.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -14,9 +16,13 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.14",
+    "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-elements": "^3.4.3",
@@ -29,8 +35,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.29.0",
-    "react-native-tab-view": "^3.5.2",
-    "expo-image-picker": "~14.7.1"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
