--- a/RunTogether/package.json
+++ b/RunTogether/package.json
@@ -2,7 +2,6 @@
   "name": "runtogether",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
-  "type": "module",
   "scripts": {
     "start": "expo start",
     "server": "nodemon ./backend/server.js",
@@ -16,12 +15,16 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "expo": "~50.0.14",
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "express": "^4.19.2",
+    "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
