--- a/RunTogether/.gitignore
+++ b/RunTogether/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 node_modules/
-
 # Expo
 .expo/
 dist/
@@ -29,7 +28,6 @@ yarn-error.*
 *.pem
 
 # local env files
-.env*.local
-
+.env
 # typescript
 *.tsbuildinfo
