--- a/RunTogether/package.json
+++ b/RunTogether/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/material-top-tabs": "^6.6.13",
@@ -20,17 +21,20 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "expo": "~50.0.14",
+    "expo-constants": "^15.4.6",
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
+    "expo-modules-core": "^1.11.13",
     "expo-status-bar": "~1.11.1",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-location": "^4.0.1",
