--- a/RunTogether/package.json
+++ b/RunTogether/package.json
@@ -22,29 +22,29 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "expo": "~50.0.14",
-    "expo-constants": "^15.4.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.5",
+    "expo": "^51.0.0",
+    "expo-constants": "~16.0.1",
+    "expo-image-picker": "~15.0.4",
+    "expo-location": "~17.0.1",
     "expo-modules-core": "^1.11.13",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-get-location": "^4.0.1",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "1.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-pager-view": "^6.2.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "3.10.0",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.29.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6"
