--- a/RunTogether/package.json
+++ b/RunTogether/package.json
@@ -39,6 +39,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-location": "^4.0.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
