--- a/RunTogether/package.json
+++ b/RunTogether/package.json
@@ -29,6 +29,7 @@
     "expo-modules-core": "^1.11.13",
     "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.2",
@@ -49,7 +50,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.29.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "redis": "^4.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
